fix ha-fab ripple overflow

--- a/src/common/ha_fab.css
+++ b/src/common/ha_fab.css
@@ -3,6 +3,7 @@
 	position: fixed !important;
 	bottom: calc(2 * var(--footer-height) + 16px) !important;
 	overflow: hidden;
+	border-radius: 16px !important;
 }
 
 /* Decrease border radius */
